--- a/app/src/main/res/layout/gemtext_quote.xml
+++ b/app/src/main/res/layout/gemtext_quote.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/gemtext_quote_textview"
     android:textSize="@dimen/default_text_size"
     android:textColor="@color/stroke"
@@ -15,4 +15,4 @@
     android:textIsSelectable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:lineHeight="@dimen/default_line_height"/>
+    app:lineHeight="@dimen/default_line_height" />
