--- a/app/src/main/res/layout/gemtext_text.xml
+++ b/app/src/main/res/layout/gemtext_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/gemtext_text_textview"
     android:textSize="@dimen/default_text_size"
     android:layout_marginLeft="@dimen/screen_margin"
@@ -9,4 +9,4 @@
     android:textIsSelectable="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:lineHeight="@dimen/default_line_height"/>
+    app:lineHeight="@dimen/default_line_height" />
